[gd_scene load_steps=10 format=3 uid="uid://cqwm056ipyeh7"]

[ext_resource type="Script" path="res://Scripts/TextScrollingController.gd" id="1_88glm"]
[ext_resource type="FontFile" uid="uid://dvrwmpaqqtnif" path="res://Fonts/kongtext.ttf" id="1_f2si7"]
[ext_resource type="Shader" path="res://Shaders/crt2.gdshader" id="2_g03do"]
[ext_resource type="AudioStream" uid="uid://fm3edg2rpjuq" path="res://Sound/single-key-01.wav" id="4_twjot"]
[ext_resource type="AudioStream" uid="uid://317e2b1cbsgu" path="res://Sound/tv-static-7019.mp3" id="5_t1aar"]

[sub_resource type="FontVariation" id="FontVariation_2lf1r"]
base_font = ExtResource("1_f2si7")

[sub_resource type="LabelSettings" id="LabelSettings_r1th4"]
line_spacing = 4.0
font = SubResource("FontVariation_2lf1r")
font_size = 55

[sub_resource type="LabelSettings" id="LabelSettings_xxtfv"]
line_spacing = 2.08165e-12
font = SubResource("FontVariation_2lf1r")
font_size = 75

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8r8lt"]
shader = ExtResource("2_g03do")
shader_parameter/overlay = false
shader_parameter/scanlines_opacity = 0.4
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.3
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = true
shader_parameter/roll = true
shader_parameter/roll_speed = 2.0
shader_parameter/roll_size = 15.562
shader_parameter/roll_variation = 0.238
shader_parameter/distort_intensity = 0.002
shader_parameter/noise_opacity = 0.4
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = 0.00100005
shader_parameter/brightness = 1.4
shader_parameter/discolor = true
shader_parameter/warp_amount = 0.0
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[node name="Tutorial" type="Node"]
script = ExtResource("1_88glm")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 200

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Part0" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 120)
layout_mode = 2
size_flags_vertical = 3
text = "[ 19██/██/██ ]"
label_settings = SubResource("LabelSettings_r1th4")
autowrap_mode = 1

[node name="Part1" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 120)
layout_mode = 2
size_flags_vertical = 3
text = "You are ███████, a scientist going to a remote tropical island in the  █████████."
label_settings = SubResource("LabelSettings_r1th4")
autowrap_mode = 1

[node name="Part2" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 120)
layout_mode = 2
size_flags_vertical = 3
text = "Your objective: ████████. However, little did you know about the mysteries that reside on this land."
label_settings = SubResource("LabelSettings_r1th4")
autowrap_mode = 1

[node name="Part3" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 120)
layout_mode = 2
size_flags_vertical = 3
text = "On your way, the helicopter suddently starts mysteriously malfunctioning. The pilot tells you to strap in as you are going to crash... Only you survived."
label_settings = SubResource("LabelSettings_r1th4")
autowrap_mode = 1

[node name="Part4" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 120)
layout_mode = 2
size_flags_vertical = 3
text = "You are freezing, soaked, fatigued, hungry and scared. However, something about this island tells you to take a relaxing and calm hike..."
label_settings = SubResource("LabelSettings_r1th4")
autowrap_mode = 1

[node name="Part5" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 120)
layout_mode = 2
size_flags_vertical = 3
text = "Follow the signs with [ WASD ], look with [ MOUSE ], read the information and enjoy the trip."
label_settings = SubResource("LabelSettings_r1th4")
autowrap_mode = 1

[node name="Part6" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 120)
layout_mode = 2
size_flags_vertical = 3
text = "Press < space > to continue..."
label_settings = SubResource("LabelSettings_xxtfv")
horizontal_alignment = 1
autowrap_mode = 2

[node name="CRT" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_8r8lt")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="CursorOn" type="Timer" parent="."]
one_shot = true

[node name="CursorOff" type="Timer" parent="."]
one_shot = true

[node name="KeySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_twjot")
volume_db = -13.082

[node name="EnterTimer" type="Timer" parent="."]
one_shot = true

[node name="Static" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_t1aar")
volume_db = -18.706
autoplay = true

[connection signal="timeout" from="Timer" to="." method="reveal_chars"]
[connection signal="timeout" from="CursorOn" to="." method="cursor_on"]
[connection signal="timeout" from="CursorOff" to="." method="curor_off"]
[connection signal="timeout" from="EnterTimer" to="." method="enter_new_line"]
